<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">GV20</string>
    <!-- 手机注册,目前只支持中国 -->
    <!-- 多通道相关字符 -->
    <!-- 设备相关 -->
    <!-- 编码设置相关字符串 -->
    <!-- 图像设置相关字符串 -->
    <!-- 录像设置相关字符串 -->
    <!-- 存储设置相关字符串 -->
    <string name="mydevice">我的设备</string>
    <string name="mysetting">设置</string>
    <string name="device_setting">基本设置</string>
    <string name="device_passwoed">密码管理</string>
    <string name="device_alarm">报警设置</string>
    <string name="device_save">存储管理</string>
    <string name="device_hight_setting">高级设置</string>
    <string name="device__internet">网络设置</string>
    <string name="device_all">通用</string>
    <!-- some datas for fisheye bulb control-->
    <string name="other_delete">删除</string>
    <string name="other_save">保存</string>
    <string name="other_shipin">视频</string>
    <string name="other_libiao">列表</string>

    <string name="cue_sim_is_no_empty">SIM不能为空</string>
    <!-- 提示语 -->
    <string name="netword_disconnect">当前网络不可用，请检查后重试</string>
    <string name="cue_carname_is_no_empty">车牌不能为空</string>
    <string name="cue_carname_is_no_Emoji">车牌不支持表情</string>
    <!--<string name="cue_sim_is_no_empty">SIM不能为空</string>-->
    <string name="app_down">下载</string>
    <string name="app_check_update">检查更新</string>
    <string name="url_error">服务器异常</string>
    <string name="language">CN</string>
    <string name="about_activity_position_clickdownload_app">点击下载凤凰智联App</string>

    <!-- other -->
    <string name="other_cancel">取消</string>
    <string name="other_ensure">确定</string>
    <string name="other_slect">请选择?</string>
    <string name="location_state">状态：</string>
    <string name="location_state_online">在线</string>
    <string name="location_state_offline">离线</string>
    <!-- 单位 -->
    <!-- 刷新提示 -->
    <!-- start -->
    <string name="start_1">智能管家，畅行天下</string>
    <string name="start_2">位置服务</string>
    <!-- main -->
    <!-- 导航 -->
    <!-- 登录 -->
    <string name="login">登录帐号</string>
    <string name="login_accounts">帐号</string>
    <string name="login_password">密码</string>
    <string name="login_login">登录</string>
    <string name="login_register">新用户注册</string>
    <string name="login_forget">忘记密码?</string>
    <!-- 注册 -->
    <string name="register">注册帐号</string>
    <string name="register_register">注册</string>
    <string name="register_1">1.验证手机</string>
    <string name="register_2">2.设置密码</string>
    <string name="register_3">3.设备绑定</string>
    <string name="register_next">下一步</string>
    <string name="register_wx">绑定微信</string>
    <!-- 主页 -->
    <!-- 绑定 -->
    <string name="binding">设备绑定</string>
    <string name="binding_text">请输入设备IMEI号进行绑定</string>
    <string name="binding_ensure">确定绑定</string>
    <!-- 音乐列表 -->
    <!-- 设置地图 -->
    <string name="setmap">设置地图</string>
    <string name="setmap_baidu">百度地图</string>
    <string name="setmap_gaode">高德地图</string>
    <!-- 轨迹 -->
    <!-- FM -->
    <!-- 二维码扫描 -->
    <string name="twocode">条形码扫描</string>
    <!-- 忘记密码 -->
    <string name="forgot">忘记密码</string>
    <string name="forgot_edit">修改</string>
    <!-- 修改密码 -->
    <string name="editpassword">修改密码</string>
    <!-- 个人中心 -->
    <string name="userinfo">个人中心</string>
    <string name="userinfo_Album">从相册选择</string>
    <string name="userinfo_camera">拍照上传</string>
    <string name="userinfo_photo">系统头像</string>
    <string name="userinfo_name">姓名</string>
    <string name="userinfo_image">头像</string>
    <string name="userinfo_accounts">帐号</string>
    <string name="userinfo_password">修改密码</string>
    <string name="userinfo_weixin">微信</string>
    <string name="userinfo_mic">蓝牙麦克风</string>
    <string name="userinfo_fm">FM发射</string>
    <string name="userinfo_map">设置地图</string>
    <string name="userinfo_mess">消息中心</string>
    <string name="userinfo_we">关于我们</string>
    <string name="userinfo_we_share">分享</string>
    <string name="share_url_format" formatted="false">推荐你使用%s软件，软件下载地址:%s[%s]</string>
    <string name="userinfo_out">退出帐号</string>
    <string name="userinfo_out_cue">帐号退出后会清除您的登录密码和消息，下次登录需要重新输入密码</string>
    <!-- 授权 -->
    <string name="permission_location">为了保证应用正常运行，需要获取位置权限</string>
    <string name="permission_camera">为了保证应用正常运行，需要获取相机权限</string>
    <string name="permission_read">为了保证应用正常运行，需要获取读写手机存储权限权限</string>
    <string name="permission">授权</string>
    <string name="permission_active">手动授权</string>
    <!-- 智能找车 -->
    <!-- 蓝牙搜索 -->
    <!-- 我在这儿 -->
    <!-- edittext hint -->
    <string name="hint_phone">请输入手机号</string>
    <string name="hint_password">请输入密码</string>
    <string name="hint_password_confirm">请确认密码</string>
    <string name="hint_name">请输入昵称</string>
    <string name="hint_imei">请输入设备编号IMEI</string>
    <string name="hint_image_code">请输入图形验证码</string>
    <string name="hint_phone_code">请输入短信验证码</string>
    <string name="hint_get_phone_code">获取验证码</string>
    <string name="hint_password_old">请输入旧密码</string>
    <string name="hint_password_new">请输入新密码</string>
    <!-- 提示语 -->
    <string name="cue_set_name">输入你想要的名称</string>
    <string name="cue_please_wait">请稍候</string>
    <string name="cue_please_wait_angle">正在调整图片请稍候</string>
    <string name="cue_no_up_apk">已是最新版本！</string>
    <string name="cue_up_apk">发现新版本是否立即更新</string>
    <string name="cue_logoutwx_wait">是否解除微信绑定?</string>
    <string name="cue_successful">成功</string>
    <string name="dakaiquanxxian">请先打开相机权限</string>
    <string name="cue_nickname_is_no_empty">名称不能为空</string>
    <string name="cue_nickname_is_no_Emoji">名称不支持表情</string>
    <string name="cue_phone_is_no_empty">手机号码不能为空</string>
    <string name="cue_password_is_no_error">旧密碼错误</string>
    <string name="cue_password_is_no_empty">密碼不能为空</string>
    <string name="cue_password_is_no_correct">密碼长度不正确</string>
    <string name="cue_is_no_bits">不能超过%d位</string>
    <string name="cue_password_is_no_confirm">两次密碼不一致</string>
    <string name="cue_macid_is_no_empty">设备号不能为空</string>
    <string name="cue_macid_is_no_correct">设备号长度不正确</string>
    <string name="cue_macid_is_error">设备号格式不正确</string>
    <string name="cue_code_is_no_empty">验证码不能为空</string>
    <string name="cue_code_is_no_agreement">请阅读并确定接受服务条款，否则不能完成注册</string>
    <string name="viewfinderview_status_text1">请将设备条形码置于方框内</string>
    <string name="viewfinderview_status_text2">即可自动扫描</string>
    <string name="msg_error_weixin">未找到微信app</string>


    <string name="N_A">N/A</string>
    <string name="close">Close</string>
    <string name="exit">Exit</string>
    <string name="sample">Sample</string>
    <string name="recent">Recent</string>
    <string name="settings">Settings</string>
    <string name="tracks">Tracks</string>
    <string name="toggle_player">Player</string>
    <string name="toggle_render">Render</string>
    <string name="toggle_ratio">Scale</string>
    <string name="show_info">Info</string>
    <string name="vdec">vdec</string>
    <string name="fps">fps</string>
    <string name="v_cache">v-cache</string>
    <string name="a_cache">a-cache</string>
    <string name="load_cost">load-cost</string>
    <string name="seek_cost">seek_cost</string>
    <string name="seek_load_cost">seek_load_cost</string>
    <string name="tcp_speed">tcp_speed</string>
    <string name="bit_rate">bit_rate</string>

    <string name="media_information">Media Information</string>
    <string name="mi_player">Player</string>
    <string name="mi_media">Media</string>
    <string name="mi_profile_level">Profile level</string>
    <string name="mi_pixel_format">Pixel format</string>
    <string name="mi_resolution">Resolution</string>
    <string name="mi_length">Length</string>
    <string name="mi_stream_fmt1">Stream #%d</string>
    <string name="mi_type">Type</string>
    <string name="mi_language">Language</string>
    <string name="mi_codec">Codec</string>
    <string name="mi_frame_rate">Frame rate</string>
    <string name="mi_bit_rate">Bit rate</string>
    <string name="mi_sample_rate">Sample rate</string>
    <string name="mi_channels">Channels</string>
    <string name="mi__selected_video_track">*</string>
    <string name="mi__selected_audio_track">*</string>
    <string name="mi__selected_subtitle_track">*</string>

    <string name="TrackType_video">Video</string>
    <string name="TrackType_audio">Audio</string>
    <string name="TrackType_subtitle">Subtitle</string>
    <string name="TrackType_timedtext">Timed text</string>
    <string name="TrackType_metadata">Meta data</string>
    <string name="TrackType_unknown">没有视频资源</string>

    <string name="VideoView_error_text_invalid_progressive_playback">Invalid progressive playback</string>
    <string name="VideoView_error_text_unknown">没有视频资源</string>
    <string name="VideoView_error_button">OK</string>

    <string name="VideoView_ar_aspect_fit_parent">Aspect / Fit parent</string>
    <string name="VideoView_ar_aspect_fill_parent">Aspect / Fill parent</string>
    <string name="VideoView_ar_aspect_wrap_content">Aspect / Wrap content</string>
    <string name="VideoView_ar_match_parent">Free / Fill parent</string>
    <string name="VideoView_ar_16_9_fit_parent">16:9 / Fit parent</string>
    <string name="VideoView_ar_4_3_fit_parent">4:3 / Fit parent</string>

    <string name="VideoView_render_none">Render: None</string>
    <string name="VideoView_render_surface_view">Render: SurfaceView</string>
    <string name="VideoView_render_texture_view">Render: TextureView</string>

    <string name="VideoView_player_none">Player: None</string>
    <string name="VideoView_player_AndroidMediaPlayer">Player: AndroidMediaPlayer</string>
    <string name="VideoView_player_IjkMediaPlayer">Player: IjkMediaPlayer</string>
    <string name="VideoView_player_IjkExoMediaPlayer">Player: IjkExoMediaPlayer</string>
</resources>
